--- a/Internal.Windows.Calls/Internal.Windows.Calls.csproj
+++ b/Internal.Windows.Calls/Internal.Windows.Calls.csproj
@@ -135,9 +135,9 @@
     <Compile Include="AudioFlags.cs" />
     <Compile Include="AudioQuality.cs" />
     <Compile Include="AvailableActions.cs" />
-    <Compile Include="PhoneCallCounts.cs" />
+    <Compile Include="CallCounts.cs" />
     <Compile Include="CallDirection.cs" />
-    <Compile Include="PhoneCall.cs" />
+    <Compile Include="Call.cs" />
     <Compile Include="CallState.cs" />
     <Compile Include="CallStateReason.cs" />
     <Compile Include="CallTransport.cs" />
@@ -152,7 +152,7 @@
     <Compile Include="PhoneOm\PH_PHONE_CALL_COUNTS.cs" />
     <Compile Include="PhoneOm\PH_PROVIDER_LINE_SERVICE_INFO.cs" />
     <Compile Include="PhoneOm\PH_PROVIDER_LINE_SERVICE_INFO_field_130.cs" />
-    <Compile Include="SystemPhoneCallManager.cs" />
+    <Compile Include="CallManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="VideoConferenceState.cs" />
