--- a/Internal.Windows.Calls/Internal.Windows.Calls.csproj
+++ b/Internal.Windows.Calls/Internal.Windows.Calls.csproj
@@ -132,17 +132,23 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AudioFlags.cs" />
-    <Compile Include="AudioQuality.cs" />
     <Compile Include="AvailableActions.cs" />
+    <Compile Include="CallActionByExternalDevice.cs" />
+    <Compile Include="CallAudioFlags.cs" />
+    <Compile Include="CallAudioQuality.cs" />
     <Compile Include="CallCounts.cs" />
     <Compile Include="CallDirection.cs" />
     <Compile Include="Call.cs" />
+    <Compile Include="CallIDChangedEventArgs.cs" />
     <Compile Include="CallState.cs" />
     <Compile Include="CallStateChangedEventArgs.cs" />
     <Compile Include="CallStateReason.cs" />
+    <Compile Include="CallTimeChangedEventArgs.cs" />
     <Compile Include="CallTransport.cs" />
     <Compile Include="CallUpgradeState.cs" />
+    <Compile Include="CallVideoConferenceState.cs" />
+    <Compile Include="CallVideoFlags.cs" />
+    <Compile Include="CallVideoTransitionState.cs" />
     <Compile Include="PhoneOm\Exports.cs" />
     <Compile Include="PhoneOm\PH_CHANGEEVENT.cs" />
     <Compile Include="PhoneOm\PH_CALL_INFO_field_1480.cs" />
@@ -156,11 +162,10 @@
     <Compile Include="PhoneOm\PH_PROVIDER_LINE_SERVICE_INFO_field_8C.cs" />
     <Compile Include="PhoneOm\PH_PROVIDER_LINE_SERVICE_INFO_field_130.cs" />
     <Compile Include="CallManager.cs" />
+    <Compile Include="PhoneOm\PH_CALL_INFO_field_BDC.cs" />
+    <Compile Include="PH_CALL_INFO_field_BF0.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
-    <Compile Include="VideoConferenceState.cs" />
-    <Compile Include="VideoFlags.cs" />
-    <Compile Include="VideoTransitionState.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
