--- a/Internal.Windows.Calls/Internal.Windows.Calls.csproj
+++ b/Internal.Windows.Calls/Internal.Windows.Calls.csproj
@@ -140,16 +140,23 @@
     <Compile Include="CallCounts.cs" />
     <Compile Include="CallDirection.cs" />
     <Compile Include="Call.cs" />
+    <Compile Include="CallerId.cs" />
     <Compile Include="CallIDChangedEventArgs.cs" />
+    <Compile Include="CallInteractor.cs" />
     <Compile Include="CallState.cs" />
     <Compile Include="CallStateChangedEventArgs.cs" />
     <Compile Include="CallStateReason.cs" />
     <Compile Include="CallTimeChangedEventArgs.cs" />
+    <Compile Include="CallTransferState.cs" />
     <Compile Include="CallTransport.cs" />
     <Compile Include="CallUpgradeState.cs" />
+    <Compile Include="CallVerbs.cs" />
     <Compile Include="CallVideoConferenceState.cs" />
     <Compile Include="CallVideoFlags.cs" />
+    <Compile Include="CallVideoTransitionError.cs" />
     <Compile Include="CallVideoTransitionState.cs" />
+    <Compile Include="FindStatus.cs" />
+    <Compile Include="PhoneCallType.cs" />
     <Compile Include="PhoneOm\Exports.cs" />
     <Compile Include="PhoneOm\PH_CHANGEEVENT.cs" />
     <Compile Include="PhoneOm\PH_CALL_INFO_field_1480.cs" />
@@ -157,6 +164,7 @@
     <Compile Include="PhoneOm\OLITEMID.cs" />
     <Compile Include="PhoneOm\PH_AVAILABLE_ACTIONS.cs" />
     <Compile Include="PhoneOm\PH_CALL_INFO.cs" />
+    <Compile Include="PhoneOm\PH_DISCONNECTDETAILS.cs" />
     <Compile Include="PhoneOm\PH_PHONE_CALL_COUNTS.cs" />
     <Compile Include="PhoneOm\PH_PROVIDER_LINE_INFO.cs" />
     <Compile Include="PhoneOm\PH_PROVIDER_LINE_SERVICE_INFO.cs" />
@@ -164,7 +172,8 @@
     <Compile Include="PhoneOm\PH_PROVIDER_LINE_SERVICE_INFO_field_130.cs" />
     <Compile Include="CallManager.cs" />
     <Compile Include="PhoneOm\PH_CALL_INFO_field_BDC.cs" />
-    <Compile Include="PH_CALL_INFO_field_BF0.cs" />
+    <Compile Include="CallFlags.cs" />
+    <Compile Include="PhoneOwningAppType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
